внесёт правки во все страницы и стили

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Главная страница Device</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
@@ -42,7 +43,7 @@
             <ul class="user-popover__list">
               <li class="user-popover__item">
                 <a class="user-popover__link" href="#">
-                  <img src="" width="" height="" alt="Любительская селфи-палка">
+                  <img src="img/popover-mini-pic1.jpg" width="39" height="43" alt="Любительская селфи-палка">
                   Любительская селфи-палка
                 </a>
                 <button class="user-popover__close" type="button">
@@ -51,7 +52,7 @@
               </li>
               <li class="user-popover__item">
                 <a class="user-popover__link" href="#">
-                  <img src="" width="" height="" alt="Профессиональная селфи-палка">
+                  <img src="img/popover-mini-pic2.jpg" width="39" height="43" alt="Профессиональная селфи-палка">
                   Профессиональная селфи-палка
                 </a>
                 <button class="user-popover__close" type="button">
@@ -76,7 +77,7 @@
           <li class="nav__item">
             <a class="nav__link" href="#">Каталог Товаров</a>
             <button class="nav__toggle" type="button">
-              <img src="img/header-catalog-button.png" width="50" height="50" alt="" aria-hidden="true">
+              <img src="img/header-catalog-button.svg" width="16" height="16" alt="" aria-hidden="true">
             </button>
 
             <div class="nav__dropdown dropdown">
@@ -133,7 +134,7 @@
                 <span class="visually-hidden">Следующий слайд</span>
               </button>
 
-              <p class="slider__title"><b>Порхает как бабочка, жалит как пчела!</b></p>
+              <p class="slider__title">Порхает как бабочка, жалит как пчела!</p>
               <p class="slider__text">
                 Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером,
                 замаскированным под стандартную камеру.
@@ -181,7 +182,7 @@
                 <span class="visually-hidden">Следующий слайд</span>
               </button>
 
-              <p class="slider__title"><b>Худеем правильно!</b></p>
+              <p class="slider__title">Худеем правильно!</p>
               <p class="slider__text">
                 Мотивирующие фитнес-браслеты помогут найти в себе
                 силы не пропускать занятия и соблюдать диету.
@@ -225,7 +226,7 @@
                 <span class="visually-hidden">Следующий слайд</span>
               </button>
 
-              <p class="slider__title"><b>Делай селфи, как Бен Стиллер!</b></p>
+              <p class="slider__title">Делай селфи, как Бен Стиллер!</p>
               <p class="slider__text">
                 Самая длинная палка для селфи доступна в нашем магазине.
                 Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
@@ -368,7 +369,7 @@
       </section>
 
       <section class="about">
-        <h3 class="about__title">О нас</h3>
+        <h2 class="about__title">О нас</h2>
 
         <p class="about__text">
           Огромный выбор гаджетов не оставит равнодушным гика,
@@ -389,7 +390,7 @@
       </section>
 
       <section class="contacts">
-        <h3 class="contacts__title">Контакты</h3>
+        <h2 class="contacts__title">Контакты</h2>
 
         <p class="contacts__text">
           Вы можете забрать товар сами, заехав в наш офис.
@@ -464,24 +465,24 @@
         </li>
       </ul>
 
-      <a class="footer__phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="footer__phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
 
       <ul class="footer__socials">
         <li class="footer__social">
           <a class="footer__social-link" href="#">
-            <img src="img/footer-facebook-icon.svg" width="40" height="40" alt="Фейсбук">
+            <img src="img/footer-facebook-icon.svg" width="9" height="18" alt="Фейсбук">
             <span class="visually-hidden">Фейсбук</span>
           </a>
         </li>
         <li class="footer__social">
           <a class="footer__social-link" href="#">
-            <img src="img/footer-instagram-icon.svg" width="40" height="40" alt="Инстаграм">
+            <img src="img/footer-instagram-icon.svg" width="16" height="16" alt="Инстаграм">
             <span class="visually-hidden">Инстаграм</span>
           </a>
         </li>
         <li class="footer__social">
           <a class="footer__social-link" href="#">
-            <img src="img/footer-twitter-icon.svg" width="40" height="40" alt="Твиттер">
+            <img src="img/footer-twitter-icon.svg" width="15" height="14" alt="Твиттер">
             <span class="visually-hidden">Твиттер</span>
           </a>
         </li>
@@ -489,7 +490,7 @@
 
       <a class="footer__academy" href="https://htmlacademy.ru" target="_blank">
         <span class="visually-hidden">HTML Academy</span>
-        <img src="img/footer_html-academy.svg" width="115" height="33" alt="HTML-Академия">
+        <img src="img/footer-html-academy.svg" width="115" height="33" alt="HTML-Академия">
       </a>
     </footer>
   </body>
