--- a/products.html
+++ b/products.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Моноподы для селфи</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
@@ -47,7 +48,7 @@
             <ul class="user-popover__list">
               <li class="user-popover__item">
                 <a class="user-popover__link" href="#">
-                  <img src="" width="" height="" alt="Любительская селфи-палка">
+                  <img src="img/popover-mini-pic1.jpg" width="39" height="43" alt="Любительская селфи-палка">
                   Любительская селфи-палка
                 </a>
                 <button class="user-popover__close" type="button">
@@ -56,7 +57,7 @@
               </li>
               <li class="user-popover__item">
                 <a class="user-popover__link" href="#">
-                  <img src="" width="" height="" alt="Профессиональная селфи-палка">
+                  <img src="img/popover-mini-pic2.jpg" width="39" height="43" alt="Профессиональная селфи-палка">
                   Профессиональная селфи-палка
                 </a>
                 <button class="user-popover__close" type="button">
@@ -81,7 +82,7 @@
           <li class="nav__item">
             <a class="nav__link" href="#">Каталог Товаров</a>
             <button class="nav__toggle" type="button">
-              <img src="img/header-catalog-button.png" width="50" height="50" alt="" aria-hidden="true">
+              <img src="img/header-catalog-button.svg" width="16" height="16" alt="" aria-hidden="true">
             </button>
 
             <div class="nav__dropdown dropdown">
@@ -143,7 +144,7 @@
 
           <form class="filter__form" action="">
             <fieldset class="filter__fieldset">
-              <legend class="filter__legend catalog-titles">Стоимость</legend>
+              <legend class="filter__legend catalog-title">Стоимость</legend>
 
               <div class="filter__range-buttons">
                 <button class="filter__range filter__range--min" type="button">
@@ -165,7 +166,7 @@
             </fieldset>
 
             <fieldset class="filter__fieldset">
-              <legend class="filter__legend catalog-titles">Цвет</legend>
+              <legend class="filter__legend catalog-title">Цвет</legend>
 
               <ul class="filter__list">
                 <li class="filter__item">
@@ -331,19 +332,19 @@
       <ul class="footer__socials">
         <li class="footer__social">
           <a class="footer__social-link" href="#">
-            <img src="img/footer-facebook-icon.svg" width="40" height="40" alt="Фейсбук">
+            <img src="img/footer-facebook-icon.svg" width="9" height="18" alt="Фейсбук">
             <span class="visually-hidden">Фейсбук</span>
           </a>
         </li>
         <li class="footer__social">
           <a class="footer__social-link" href="#">
-            <img src="img/footer-instagram-icon.svg" width="40" height="40" alt="Инстаграм">
+            <img src="img/footer-instagram-icon.svg" width="16" height="16" alt="Инстаграм">
             <span class="visually-hidden">Инстаграм</span>
           </a>
         </li>
         <li class="footer__social">
           <a class="footer__social-link" href="#">
-            <img src="img/footer-twitter-icon.svg" width="40" height="40" alt="Твиттер">
+            <img src="img/footer-twitter-icon.svg" width="15" height="14" alt="Твиттер">
             <span class="visually-hidden">Твиттер</span>
           </a>
         </li>
@@ -351,7 +352,7 @@
 
       <a class="footer__academy" href="https://htmlacademy.ru" target="_blank">
         <span class="visually-hidden">HTML Academy</span>
-        <img src="img/footer_html-academy.svg" width="115" height="33" alt="HTML-Академия">
+        <img src="img/footer-html-academy.svg" width="115" height="33" alt="HTML-Академия">
       </a>
     </footer>
   </body>
