--- a/products.html
+++ b/products.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <header class="header" href="index.html">
-      <a class="header__logo logo">
+    <header class="header">
+      <a class="header__logo logo"  href="index.html">
         <img src="img/header-logo.svg" width="145" height="36" alt="Магазин Девайс">
       </a>
 
@@ -144,7 +144,7 @@
 
           <form class="filter__form" action="">
             <fieldset class="filter__fieldset">
-              <legend class="filter__legend catalog-title">Стоимость</legend>
+              <legend class="filter__legend">Стоимость</legend>
 
               <div class="filter__range-buttons">
                 <button class="filter__range filter__range--min" type="button">
@@ -166,7 +166,7 @@
             </fieldset>
 
             <fieldset class="filter__fieldset">
-              <legend class="filter__legend catalog-title">Цвет</legend>
+              <legend class="filter__legend">Цвет</legend>
 
               <ul class="filter__list">
                 <li class="filter__item">
@@ -193,7 +193,7 @@
             </fieldset>
 
             <fieldset class="filter__fieldset">
-              <legend class="filter__title">Bluetooth</legend>
+              <legend class="filter__legend">Bluetooth</legend>
 
               <ul class="filter__list">
                 <li class="filter__item">
@@ -213,7 +213,7 @@
 
         <div class="main__sorting sorting">
           <div class="sorting__top-wrap">
-            <h2 class="sorting__title filter-sorting">Сортировка:</h2>
+            <h2 class="sorting__title">Сортировка:</h2>
 
             <form class="sorting__form" action="">
               <select class="sorting__select" name="sort">
@@ -327,7 +327,7 @@
         </li>
       </ul>
 
-      <a class="footer__phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="footer__phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
 
       <ul class="footer__socials">
         <li class="footer__social">
