Внесёт шлифовку мелочей главной страницы

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 
           <div class="header__wrapper">
             <form class="header__form" action="" method="post">
-              <img class="header__search-icon" src="img/loop.svg" width="16" height="16" alt="" aria-hidden="true">
-              <label class="visually-hidden" for="search">Поиск</label>
-              <input class="header__search-input" id="search" type="search" name="search" placeholder="Текст поиска">
+              <div class="header__search-wrap">
+                <img class="header__search-icon" src="img/loop.svg" width="16" height="16" alt="" aria-hidden="true">
+                <label class="visually-hidden" for="search">Поиск</label>
+                <input class="header__search-input" id="search" type="search" name="search" placeholder="Текст поиска">
+              </div>
               <button class="header__submit" type="submit">Найти</button>
             </form>
 
