--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
           <div class="slider">
             <ul class="slider__list list-reset">
-              <li class="slider__item">
+              <li class="slider__item slider__item--active">
                 <div class="slider__wrapper">
                   <img class="slider__img" src="img/slider-1.jpg" width="560" height="560" alt="Дроны">
 
@@ -373,7 +373,7 @@
 
           <div class="advantage__wrapper">
             <ul class="advantage__buttons-list">
-              <li class="advantage__button-item">
+              <li class="advantage__button-item advantage__button-item--active">
                 <button class="advantage__button button" type="button">Доставка</button>
               </li>
               <li class="advantage__button-item">
@@ -385,7 +385,7 @@
             </ul>
 
             <ul class="advantage__content-list">
-              <li class="advantage__content-item">
+              <li class="advantage__content-item advantage__content-item--active">
                 <h3>Доставка</h3>
                 <p>
                   Мы с удовольствием доставим ваш товар прямо
