Добавит иконки по заданию 7.1

--- a/products.html
+++ b/products.html
@@ -31,7 +31,7 @@
                   Коля Петухов
                 </a>
               </li>
-              <li class="user-list__item">
+              <li class="user-list__item user-list__item--disabled">
                 <a class="user-list__link" href="#">Выйти</a>
               </li>
               <li class="user-list__item">
